--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>JavaScript Game</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Anta&display=swap');
+    </style>
+    <link rel="stylesheet" href="style.css">
+    
+    
 </head>
 <body>
     <canvas id="canvas1"></canvas>
